[metadata]
name = sssdldapauth
version = attr: sssdldapauth.__version__
description = Supports deobfuscating LDAP passwords contained in (System Security Services Daemon) sssd.conf files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jteppinette/python-sssd-ldap-auth
author = Joshua Taylor Eppinette
author_email = jteppinette@jteppinette.com
license = MIT

[options]
packages = find:
python_requires = >= 3.6
include_package_data = True
install_requires=
	cryptography

[options.package_data]
sssdldapauth = py.typed
